--- a/config.example.json
+++ b/config.example.json
@@ -3,9 +3,9 @@
   "app_secret": "YOUR_APP_SECRET",
   "server_addr": ":8080",
   "llm": {
-    "provider": "openai",          // 可选：openai / deepseek / custom
-    "model": "gpt-4.1-mini",       // 指定模型名称
-    "api_key_env": "OPENAI_API_KEY", // 从该环境变量读取密钥
-    "base_url": ""                 // 自建网关或代理时填；为空用默认
+    "provider": "openai",            // 可选：openai / deepseek（OpenAI兼容）
+    "model": "gpt-4.1-mini",         // 指定模型名称
+    "api_key": "YOUR_API_KEY",       // 直接写入配置，不再读取环境变量
+    "base_url": ""                   // 自建网关或代理时填；deepseek 必须填其兼容接口地址
   }
 }
