Simplify deploy env template to essential settings

--- a/config/deploy.env.example
+++ b/config/deploy.env.example
@@ -1,29 +1,16 @@
-# Deploy configuration for scripts/deploy.sh
-# Copy to config/deploy.env and adjust values.
+# Minimal deploy overrides (copy to config/deploy.env and fill).
+# Omitted values fall back to sensible defaults inside scripts/deploy.sh.
 
-# System user to run service
-APP_USER=www-data
-
-# Paths
-BINARY=/home/swartz/WorkSpace/Auto_wechat-article-publisher/bin/auto-wechat-article-publisher
-CONFIG_FILE=/home/swartz/WorkSpace/Auto_wechat-article-publisher/config/config.json
-STATIC_SRC=/home/swartz/WorkSpace/Auto_wechat-article-publisher/server/web/dist
-STATIC_ROOT=/var/www/auto-wechat
-
-# Service
-SERVICE_NAME=auto-wechat.service
-# Bind address override; leave empty to use config/config.json's server_addr
-BIND_ADDR=:8080
-
-# TLS / domain
+# --- Required ---
 DOMAIN=example.com
-DOMAIN_ALIASES=www.example.com
 SSL_CERT_PATH=/etc/ssl/certs/example.crt
 SSL_KEY_PATH=/etc/ssl/private/example.key
-HTTPS_PORT=443
-HTTP_PORT=80
 
-# Nginx
-NGINX_SITE_NAME=auto-wechat
-NGINX_CONF_PATH=/etc/nginx/sites-available/auto-wechat.conf
-NGINX_ENABLED_PATH=/etc/nginx/sites-enabled/auto-wechat.conf
+# --- Commonly changed ---
+# HTTP/HTTPS ports (frontend redirect + TLS)
+HTTP_PORT=80
+HTTPS_PORT=443
+# Backend listen address; empty = use config/config.json server_addr
+BIND_ADDR=:8080
+# Extra hostnames (space-separated), optional
+DOMAIN_ALIASES=www.example.com
