Add file logging support and document logs

--- a/config/deploy.env.example
+++ b/config/deploy.env.example
@@ -2,3 +2,4 @@ DOMAIN=example.com
 SSL_CERT_PATH=/etc/ssl/certs/example.crt
 SSL_KEY_PATH=/etc/ssl/private/example.key
 HTTPS_PORT=443
+LOG_FILE=/var/log/auto-wechat/app.log
